animacion de los formulario

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <iframe width="100%" height="285"  src="https://www.youtube.com/embed/Oyy_Kegljoc?autoplay=1&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-2 d-flex align-items-center">
-            <div data-aos="zoom-out" class="container">
+            <div data-aos="" class="container" style="opacity: 1;transform: translateZ(0) scale(1);">
                 <!-- ======= Formulario ======= -->
               <div id="mc_embed_signup">
                   <form action="https://gmail.us6.list-manage.com/subscribe/post?u=baec963b3d3b390318e7a5aac&amp;id=85604cb465" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
