--- a/index.html
+++ b/index.html
@@ -935,6 +935,16 @@ function validarFormulario(evento) {
 }
   </script>
 
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-MM7QQZJKX0"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-MM7QQZJKX0');
+</script>
+
 </body>
 
 </html>
