--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <div data-aos="" class="container" style="opacity: 1;transform: translateZ(0) scale(1);">
                 <!-- ======= Formulario ======= -->
               <div id="mc_embed_signup">
-                  <form action="https://gmail.us6.list-manage.com/subscribe/post?u=baec963b3d3b390318e7a5aac&amp;id=85604cb465" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                  <form action="https://gmail.us6.list-manage.com/subscribe/post?u=baec963b3d3b390318e7a5aac&amp;id=85604cb465" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate"  novalidate>
                       <div id="mc_embed_signup_scroll">
                   <div class="mc-field-group d-flex flex-column">
                     <label for="mce-FNAME">¿Cuál es tu nombre?  </label>
