--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         
 
         <div class="row justify-content-between">
-          <div class="col-lg-6 order-1 order-lg-1 hero-img" data-aos="zoom-out" data-aos-delay="300" style="display: flex;flex-direction: column;">
-            <iframe width="100%" height="285"  src="https://www.youtube.com/embed/Oyy_Kegljoc?autoplay=1&rel=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+          <div class="col-lg-5 order-1 order-lg-1 hero-img" data-aos="zoom-out" data-aos-delay="300">
+            <img src="assets/img/hero-img-2.png" class="img-fluid animated" alt="">
           </div>
           <div class="col-lg-6 pt-5 pt-lg-0 order-2 order-lg-2 d-flex align-items-center">
             <div data-aos="" class="container" style="opacity: 1;transform: translateZ(0) scale(1);">
