Cambio de titulos

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <div class="container">
         <h1 style="text-align: center;color: #ffffff;font-style: italic;font-size: 31px;" data-aos="zoom-out" >Clase Gratuita</h1>
-        <h1 class="titular" data-aos="zoom-out" >Conoce los conceptos que debes tener en cuenta para invertir</h1>
+        <h1 class="titular" data-aos="zoom-out" >Conoce los secretos para una vida productiva como emprendedor</h1>
         <h2 style="text-align: center;" data-aos="zoom-out" >Aprende 11 conceptos que te ayudaran a tomar las decisiones correctas a la hora de invertir.</h2>
 
         
