Actualización de titular y subtitulo

--- a/index.html
+++ b/index.html
@@ -59,8 +59,8 @@
     
     <div class="container">
         <h1 style="text-align: center;color: #ffffff;font-style: italic;font-size: 31px;" data-aos="zoom-out" >Ebook Gratuito</h1>
-        <h1 class="titular" data-aos="zoom-out" >Conoce los secretos para una vida productiva como emprendedor</h1>
-        <h2 style="text-align: center;" data-aos="zoom-out" >Aprende 11 conceptos que te ayudaran a tomar las decisiones correctas a la hora de invertir.</h2>
+        <h1 class="titular" data-aos="zoom-out" >Descubre los 5 secretos para ser más productivo como emprendedor</h1>
+        <h2 style="text-align: center;" data-aos="zoom-out" >Aprender cómo planificar tu día como un pro y alcanzar tus objetivos más rápido</h2>
 
         
 
