--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     
     <div class="container">
         <h1 style="text-align: center;color: #ffffff;font-style: italic;font-size: 31px;" data-aos="zoom-out" >Ebook Gratuito</h1>
-        <h1 class="titular" data-aos="zoom-out" >Descubre los 5 secretos que te convertirán en el emprendedor más productivo</h1>
+        <h1 class="titular" data-aos="zoom-out" >Descubre los 5 secretos que te convertirán en un emprendedor más productivo</h1>
         <h2 style="text-align: center;" data-aos="zoom-out" >Aprender cómo planificar tu día como un pro y alcanzar tus objetivos más rápido</h2>
 
         
