Actualización de titular y subtitulo v2

--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
     
     <div class="container">
         <h1 style="text-align: center;color: #ffffff;font-style: italic;font-size: 31px;" data-aos="zoom-out" >Ebook Gratuito</h1>
-        <h1 class="titular" data-aos="zoom-out" >Descubre los 5 secretos para dominar el arte de la productividad como emprendedor</h1>
+        <h1 class="titular" data-aos="zoom-out" >¡Domina la planificación diaria y aumenta tu productividad con los 5 Secretos para una Planificación Diaria Productiva!</h1>
         <h2 style="text-align: center;" data-aos="zoom-out" >Aprender cómo planificar tu día como un pro y alcanzar tus objetivos más rápido</h2>
 
         
