--- a/index.html
+++ b/index.html
@@ -114,8 +114,8 @@
           </div>
 
           <div class="col-xl-7 col-lg-6  icon-boxes d-flex flex-column align-items-stretch justify-content-center py-5 px-lg-5" data-aos="fade-left">
-            <h3>Comienza a invertir tu dinero con las bases necesarias para tener éxito</h3>
-            <p>Antes de comenzar tienes que tener claros conceptos básicos que hacen que una inversión tengas altas posibilidades de temer éxito.</p>
+            <h3>Aumenta tu productividad y reduce el estrés con estos sencillos secretos para emprendedores</h3>
+            <p>Ser más productivo en tu vida impacta positivamente en tu emprendimiento, esto es crucial para alcanzar tus objetivos y crecer como empresario.</p>
 
             <div class="icon-box d-flex flex-row align-items-center" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i class="bx bi-cash"></i></div>
