--- a/index.html
+++ b/index.html
@@ -119,19 +119,19 @@
 
             <div class="icon-box d-flex flex-row align-items-center" data-aos="zoom-in" data-aos-delay="100">
               <div class="icon"><i class="bx bi-cash"></i></div>
-              <h4 class="title">Todos los conceptos que necesitas para empezar a invertir </h4>
+              <h4 class="title">5 secretos para mejorar tu productividad hoy mismo</h4>
               <!-- <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p> -->
             </div>
 
             <div class="icon-box d-flex flex-row align-items-center" data-aos="zoom-in" data-aos-delay="200">
               <div class="icon"><i class="bx bi-list-check"></i></div>
-              <h4 class="title">TIPS basados en los mejores casos de éxito en los negocios</h4>
+              <h4 class="title">Los beneficios de implementar los cinco secretos</h4>
               <!-- <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p> -->
             </div>
 
             <div class="icon-box d-flex flex-row align-items-center" data-aos="zoom-in" data-aos-delay="300">
               <div class="icon"><i class="bx bi-chat-square-quote-fill"></i></div>
-              <h4 class="title">Ejemplos para comprender los conceptos</h4>
+              <h4 class="title">Un plan de acción que puedes usar para aplicar los 5 secretos </h4>
               <!-- <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p> -->
             </div>
 
