Cambio de icono

--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <p>Ser más productivo en tu vida impacta positivamente en tu emprendimiento, esto es crucial para alcanzar tus objetivos y crecer como empresario.</p>
 
             <div class="icon-box d-flex flex-row align-items-center" data-aos="zoom-in" data-aos-delay="100">
-              <div class="icon"><i class="bx bi-cash"></i></div>
+              <div class="icon"><i class="bi bi-file-earmark-lock2-fill"></i></div>
               <h4 class="title">5 secretos para mejorar tu productividad hoy mismo</h4>
               <!-- <p class="description">Explicabo est voluptatum asperiores consequatur magnam. Et veritatis odit. Sunt aut deserunt minus aut eligendi omnis</p> -->
             </div>
