--- a/gracias-final.html
+++ b/gracias-final.html
@@ -62,7 +62,7 @@
            
         <div class="row justify-content-center">
           <div class="d-flex justify-content-center" style="z-index: 1;">
-            <a href="descargas/El-mejor-consejo-para-comenza-a-empreder.pdf" class="btn btn-warning mx-2 px-5" download>PDF</a>
+            <a href="5%20SECRETOS%20PARA%20LA%20PLANIFICACIÓN%20DIARIA.pdf" class="btn btn-warning mx-2 px-5" download>PDF</a>
             <a href="descargas/El-mejor-consejo-para-comenza-a-empreder.epub"  class="btn btn-warning mx-2 px-5" download>EPUB</a>
           </div>
           <div class="col-lg-4 order-1 order-lg-1 hero-img" data-aos="zoom-out" data-aos-delay="300">
