Cambiar link de instagram

--- a/gracias-final.html
+++ b/gracias-final.html
@@ -91,7 +91,7 @@
 
   <section id="about" class="about" style="text-align: center;">
     <h3 style="color:#402eebd6 ;">Conecta con nosotros</h3>
-    <a href=""><img width="50px" src="./assets/img/instagram.png" alt="Instagram">    </a>
+    <a href="https://www.instagram.com/mindmillionaires/"><img width="50px" src="./assets/img/instagram.png" alt="Instagram">    </a>
 
   </section>
     
