--- a/gracias-final.html
+++ b/gracias-final.html
@@ -90,7 +90,7 @@
   </section><!-- End Hero -->
 
   <section id="about" class="about" style="text-align: center;">
-    <h3 style="color:#402eebd6 ;">Conecta con nosotros</h3>
+    <h3 style="color:##e84847 ;">Conecta con nosotros</h3>
     <a href="https://www.instagram.com/mindmillionaires/"><img width="50px" src="./assets/img/instagram.png" alt="Instagram">    </a>
 
   </section>
