--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
   <link href="assets/img/hero-img-2.png.jpg" rel="apple-touch-icon">
-  <meta property="og:image" content="assets/img/hero-img-2.png.jpg" />
+  <meta property="og:image" content="assets/img/hero-img-2.png" />
 
   <!-- Google Fonts -->
   <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,600,600i,700,700i|Montserrat:300,300i,400,400i,500,500i,600,600i,700,700i|Poppins:300,300i,400,400i,500,500i,600,600i,700,700i" rel="stylesheet">
