--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <!-- Favicons -->
   <link href="assets/img/favicon.png" rel="icon">
-  <link href="assets/img/hero-img-2.png.jpg" rel="apple-touch-icon">
+  <link href="assets/img/hero-img-2.png" rel="apple-touch-icon">
   <meta property="og:image" content="assets/img/hero-img-2.png" />
 
   <!-- Google Fonts -->
